[package]
name = "nula-compiler"
version = "0.1.0"
edition = "2021"
description = "The backend compiler for the Nula programming language, handling semantic analysis, type checking, and code generation."
authors = ["Michal92299 <michalkaczmarzyk2009@gmail.com>"]
license = "MIT"
repository = "https://github.com/michal92299/nula-programing-language/tree/main/compiler"
readme = "README.md"

[dependencies]
miette = { version = "7.2.0", features = ["fancy"] }
indextree = "4.6.1"
tycho = "0.1.0"  # Note: Tycho might not exist; this is a placeholder. Replace with actual crate if available.
cranelift = "0.108.1"
cranelift-module = "0.108.1"
cranelift-codegen = "0.108.1"
cranelift-frontend = "0.108.1"
cranelift-native = "0.108.1"
cranelift-object = "0.108.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
anyhow = "1.0.89"
log = "0.4.22"
env_logger = "0.11.5"
target-lexicon = "0.12.17"
clap = { version = "4.5.18", features = ["derive"] }
hashbrown = "0.15.0"  # For potential custom hashing needs
thiserror = "1.0.64"

[dev-dependencies]
insta = "1.40.0"

[features]
default = ["arena-allocator"]
arena-allocator = []  # Feature for enabling arena allocation
manual-memory = []    # Feature for manual memory management
static-binary = []    # For fully static binaries
dynamic-binary = []   # For dynamic linking

[[bin]]
name = "nula-compiler"
path = "src/main.rs"
