[package]
name = "nula-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Michal92299 <michalkaczmarzyk2009@gmail.com>"]

[dependencies]
miette = { version = "7.2.0", features = ["fancy"] }
indextree = { version = "4.6.1", features = ["serde"] }
cranelift = "0.108.1"
cranelift-module = "0.108.1"
cranelift-codegen = "0.108.1"
cranelift-frontend = "0.108.1"
cranelift-native = "0.108.1"
cranelift-object = "0.108.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
anyhow = "1.0.89"
log = "0.4.22"
env_logger = "0.11.5"
target-lexicon = "0.12"
clap = { version = "4.5.18", features = ["derive"] }
hashbrown = "0.15.0"
thiserror = "1.0.64"

[[bin]]
name = "nula-compiler"
path = "src/main.rs"
