[package]
name = "nula-frontend"
version = "0.1.0"
edition = "2021"
description = "The frontend for the Nula programming language, handling lexing and parsing."
authors = ["Michal92299 <michalkaczmarzyk2009@gmail.com>"]
license = "BSD-3"
repository = "https://github.com/michal92299/nula-programing-language/tree/main/src/nula-fronted"
readme = "README.md"

[dependencies]
winnow = "0.6.18"
logos = "0.14.3"
indextree = "4.6.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
anyhow = "1.0.89"
log = "0.4.22"
env_logger = "0.11.5"
clap = { version = "4.5.18", features = ["derive"] }
thiserror = "1.0.64"
miette = { version = "7.2.0", features = ["fancy"] }

[dev-dependencies]
insta = "1.40.0"

[[bin]]
name = "nula-frontend"
path = "src/main.rs"
